--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,8 @@
   "require": {
     "illuminate/support": "^5.1",
     "illuminate/http": "^5.1"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^4.7"
   }
 }
