--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
     }
   },
   "require": {
-    "illuminate/support": "^5.1",
-    "illuminate/http": "^5.1"
+    "illuminate/support": "^5.1|^4.2",
+    "illuminate/http": "^5.1|^4.2"
   },
   "require-dev": {
     "phpunit/phpunit": "^4.7"
